crates/strider-analyze/tests/snapshots/v2__x64__control__nested_loops.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v9" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v9" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "11" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v12" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v9" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v14" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "13" -> "v14" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "13" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "16" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v14" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v18" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v18" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "17" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "16" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "20" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v18" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "20" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "25" -> "21" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="φ RDX", shape=house, fillcolor="#163030"];
  "20" -> "24" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" [label="φ RDX", shape=house, fillcolor="#163030"];
  "16" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="φ RCX", shape=house, fillcolor="#163030"];
  "5" -> "34" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="φ RDX", shape=house, fillcolor="#163030"];
  "11" -> "40" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "30" -> "40" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="φ R8", shape=house, fillcolor="#163030"];
  "20" -> "43" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "45" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="φ R8", shape=house, fillcolor="#163030"];
  "16" -> "45" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "47" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="φ R8", shape=house, fillcolor="#163030"];
  "11" -> "50" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "47" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="φ R8", shape=house, fillcolor="#163030"];
  "5" -> "46" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "45" -> "46" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "52" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="arg[0] ← EDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "55" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="φ RAX", shape=house, fillcolor="#163030"];
  "11" -> "57" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "58" -> "57" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "59" -> "57" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "54" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="arg[1] ← ESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "64" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "52" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "52" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
